Fixed styles to show truncated text onRowSelect

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,13 @@ body {
   background-color: #fffefbd7;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.ag-theme-alpine .ag-cell {
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.ag-theme-alpine .ag-row-selected .ag-cell {
+  white-space: normal !important;
+  overflow: visible !important;
+}
